add BLS12-377 curve

--- a/libff/CMakeLists.txt
+++ b/libff/CMakeLists.txt
@@ -25,6 +25,11 @@ add_library(
   ff
   STATIC
 
+  algebra/curves/bls12_377/bls12_377_g1.cpp
+  algebra/curves/bls12_377/bls12_377_g2.cpp
+  algebra/curves/bls12_377/bls12_377_init.cpp
+  algebra/curves/bls12_377/bls12_377_pairing.cpp
+  algebra/curves/bls12_377/bls12_377_pp.cpp
   algebra/curves/bls12_381/bls12_381_g1.cpp
   algebra/curves/bls12_381/bls12_381_g2.cpp
   algebra/curves/bls12_381/bls12_381_init.cpp
